munin (work)

  * Failsafe entry for @@PYTHON@@.
  * Bugfix in munin-limits (it didn't work properly).

munin (1.1.5)

  - Munin main package:
    * Treat long field names properly. Sadly, this will lead to data loss
      for fields that earlier had their field names truncated. :-(
    * Small interface improvements in the HTML output.
    * Changes of min and max values now causes corresponding changes in 
      the RRD files.
    * Added new option "graph_sums" which creates summarised graphs.
    * Munin-update adapts to field type changes (loss-free conversion from
      COUNTER->DERIVE et al.)
    * Added new config option "local_address", to specify which local address
      outgoing connections (from munin-update) should be used.
    * Added "comparison" views, to view a whole hostgroup at once.
    * Bugfix in munin-limits.
    * Draw min/max ranges in all graphs with only one visible field.
    * Replaced notification system. Munin can now send warning/critical
      messages to whatever process/file that is needed.
    * Removed the munin-nagios program, as it is no longer needed.
    * Use column headers for min/max/cur/avg if label is too long.
    * Minor template modifications, so the output HTML validates correctly
      (SF#1039850).
    * Added new field option "line", which draws HRULEs.
	

  - Munin-node:
    * The node now changes dir to /, to make sure it's in a directory
      readable by all users.
    * Added per-plugin timeouts, contributed by Chan Wilson (SF#881044).

  - Plugins
    * SNMP plugin "df" properly strips the label and serial number from
      Windows drive labels.
    * SNMP plugins now honour the "host" environment variable if they can't
      deduce the hostname from $0.
    * Use @@PERL@@ in all perl shebang lines.
    * Added new SNMP plugins for sensors, reading info from System-Informant on
      Windows boxes.
    * New wildcard plugin generic/ping_ to graph ping times.