@@ -47,7 +47,13 @@ install-main: build
 
 	$(INSTALL) -m 0644 build/server/Munin.pm $(PERLLIB)/
 
-install-node: build
+install-node: build install-node-non-snmp install-node-snmp
+	echo Done.
+
+install-node-snmp: build
+	$(INSTALL) -m 0755 build/node/munin-node-configure-snmp $(SBINDIR)/
+
+install-node-non-snmp: build
 	$(CHECKGROUP)
 	mkdir -p $(CONFDIR)/plugins
 	mkdir -p $(CONFDIR)/plugin-conf.d
@@ -65,12 +71,9 @@ install-node: build
 
 	$(INSTALL) -m 0755 build/node/munin-node $(SBINDIR)/
 	$(INSTALL) -m 0755 build/node/munin-node-configure $(SBINDIR)/
-	$(INSTALL) -m 0755 build/node/munin-node-configure-snmp $(SBINDIR)/
 	test -f "$(CONFDIR)/munin-node.conf" || $(INSTALL) -m 0644 build/node/munin-node.conf $(CONFDIR)/
 	$(INSTALL) -m 0755 build/node/munin-run $(SBINDIR)/
 	
-#	$(INSTALL) -m 0644 build/node/SNMP.pm $(PERLLIB)/Munin/Plugin/
-
 install-node-plugins: build
 	for p in build/node/node.d.$(OSTYPE)/* build/node/node.d/*; do    		\
 		if test -f "$$p" ; then                                     		\
